# twitter_clone_practice

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: database.py  init_db.py  main.py
app/api/endpoints/: follows.py  media.py  medias.py  tweets.py  users.py
app/models/: follow.py  like.py  media.py  tweet.py  user.py
app/schemas/: follow.py  like.py  tweet.py  user.py
migrations/: env.py
migrations/versions/: 03b27927d4b8_add_media_model.py  1299bf74558f_create_users_table.py  66fa4e4881c7_add_follows_table.py  b611c733875e_add_likes_table.py  cd69b4127b58_add_likes_table.py  ebaefc27e99b_initial_migration.py
tests/: conftest.py  test_follow.py  test_tweets.py  test_user.py
