[tool.poetry]
name = "microblog-app"
version = "0.1.0"
description = ""
authors = ["NikitaErmakov <ermafin.@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.115.8" }
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
psycopg2 = "==2.9.10"
trio = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
coverage = ">=7.0"
flake8 = ">=7"
hypercorn = ">=0.16.0"
mypy = ">=1.8"
pylint = ">=3"
pytest = ">=7.4"
pytest-cov = ">=4.1.0"
sphinx = ">=7.2.0"
sphinx-rtd-theme = ">=2.0.0"
twine = ">=4.0.0"
wheel = ">=0.42.0"
